DOM, eventListner and getElementById

--- a/week2/w2d1/index.html
+++ b/week2/w2d1/index.html
@@ -1,21 +1,19 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <link rel="stylesheet" href="styles.css" />
-    <script defer src="script.js"></script>
-    <title>Cafe Menu</title>
+    <title>Event Listener Example</title>
+    <link rel="stylesheet" type="text/css" href="styles.css" />
   </head>
-
   <body>
-    <div id="cafe">
-      <h1 id="cafe-name">The Chipped Cup</h1>
-      <h2>Menu</h2>
-      <ul>
-        <li>Espresso</li>
-        <li>Cappuccino</li>
-        <li>Latte</li>
-      </ul>
-    </div>
-    <!-- <script src="script.js"></script> -->
+    <h1>Event Listener Example</h1>
+    <p>
+      Let's take a look at how to register event listeners for buttons and
+      define custom messages to be executed after the events occur.
+    </p>
+    <button id="button1">Click Me 1</button>
+    <button id="button2">Click Me 2</button>
+    <p id="message"></p>
+
+    <script src="script.js"></script>
   </body>
 </html>
